melhorias no registros de pausa

--- a/src/componentes/Tabela/Tabela.css
+++ b/src/componentes/Tabela/Tabela.css
@@ -51,7 +51,7 @@ td {
     width: 20px;
     height: 20px;
     border-radius: 50%;
-    background-color: #FDD835;
+    background-color: #FFAB00;
     display: block;
     margin: 0 auto;
 }
